envoy/config/simple/envoy-override.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: webapp
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: webapp
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: webapp


  clusters:
  - name: webapp
    connect_timeout: 30s
    # type: ORIGINAL_DST
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    load_assignment:
      cluster_name: webapp
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webapp
                port_value: 10000
        - endpoint:
            address:
              socket_address:
                address: webapp1
                port_value: 10000
